# ProteiTestTask

./: CMakeLists.txt  README.md  gtest_main.cpp
client/: CMakeLists.txt  ClientHelper.h  Settings.h
client/include/: ClientHelper.h  Settings.h
client/source/: ClientHelper.cpp  Settings.cpp  main.cpp
client/tests/: ClientTester.cpp  SettingTester.cpp
integrationTests/: CMakeLists.txt
integrationTests/source/: IntTests.cpp
network/: CMakeLists.txt
network/include/: ApplicationProtocol.h  Client.h  Helper.h  HighLevelSocket.h  NetworkError.h  NetworkHelper.h  Server.h  TCPClient.h  TCPServer.h  TCPSession.h  UDPClient.h  UDPIncomingMessage.h  UDPServer.h
network/source/: ApplicationProtocol.cpp  Client.cpp  Helper.cpp  HighLevelSocket.cpp  NetworkError.cpp  NetworkHelper.cpp  Server.cpp  TCPClient.cpp  TCPServer.cpp  TCPSession.cpp  UDPClient.cpp  UDPIncomingMessage.cpp  UDPServer.cpp
network/tests/: ApplicationProtocolTester.cpp  NetworkTester.cpp
server/: CMakeLists.txt
server/include/: ServerHelper.h  Setting.h  Statistic.h  SyncErr.h  SyncOut.h
server/source/: Helper.cpp  ServerHelper.cpp  Setting.cpp  SyncErr.cpp  SyncOut.cpp  main.cpp
